--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ tasks.withType(JavaCompile) {
 
 dependencies {
     compileOnly('javax.servlet:javax.servlet-api:4.0.1')
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
     implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
